# ztransfer

./: .gitignore  CMakeLists.txt  broadcast-addrs.c  broadcastlist.c  ztransfer  ztransfer-lib.h  ztransfer-linux.c  ztransfer-windows.c  ztransfer.c
