cmake_minimum_required(VERSION 3.28)
project(ztransfer LANGUAGES C)
add_executable(${PROJECT_NAME} ztransfer.c broadcastlist.c broadcast-addrs.c)
target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>:DEBUG>)
if (WIN32)
    target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32 iphlpapi)
    target_sources(${PROJECT_NAME} PRIVATE ztransfer-windows.c)
elseif(UNIX)
    target_sources(${PROJECT_NAME} PRIVATE ztransfer-linux.c)
endif()