cmake_minimum_required(VERSION 3.28)
project(ztransfer LANGUAGES C)
add_executable(${PROJECT_NAME} ztransfer.c broadcastlist.c broadcast-addrs.c)
target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<CONFIG:Debug>:DEBUG>)
if (WIN32)
    target_include_directories(${PROJECT_NAME} PRIVATE PDCurses-master)
    target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32 iphlpapi "${CMAKE_CURRENT_SOURCE_DIR}/PDCurses-master/wincon/pdcurses.a")
    target_sources(${PROJECT_NAME} PRIVATE ztransfer-windows.c)
elseif(UNIX)
    target_link_libraries(${PROJECT_NAME} PRIVATE ncurses)
    target_sources(${PROJECT_NAME} PRIVATE ztransfer-linux.c)
endif()